--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,9 +27,9 @@ native-tls = ["reqwest?/native-tls"]
 fontconfig = ["fontdb/fontconfig"]
 
 [dependencies]
-typst = { git = "https://github.com/typst/typst.git", tag = "v0.10.0" }
-typst-ide = { git = "https://github.com/typst/typst.git", tag = "v0.10.0" }
-typst-pdf = { git = "https://github.com/typst/typst.git", tag = "v0.10.0" }
+typst = { git = "https://github.com/typst/typst.git" }
+typst-ide = { git = "https://github.com/typst/typst.git" }
+typst-pdf = { git = "https://github.com/typst/typst.git" }
 
 anyhow = "1.0.71"
 async-compression = { version = "0.4.1", features = ["tokio", "gzip"] }
